# HNU_2023_Capstone

./: .gitignore
00_slide/: 슬라이드.typ
00_slide/slide/: .flutter-plugins  .flutter-plugins-dependencies  PATH_Output.txt  analysis_options.yaml  pubspec.yaml
00_slide/slide/.dart_tool/: package_config.json  package_config_subset
00_slide/slide/.dart_tool/chrome-device/Default/: DIPS  Favicons  History  History-journal  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Shortcuts  Top Sites  TransportSecurity  Visited Links  Web Data
00_slide/slide/.dart_tool/flutter_build/486197d33bc87aa158cc47f4dcab6d20/: .filecache  app.dill.deps  dart2js.d  dart2js.stamp  flutter_assets.d  main.dart  main.dart.js  main.dart.js.deps  outputs.json  service_worker.d  web_entrypoint.stamp  web_release_bundle.stamp  web_resources.d  web_service_worker.stamp  web_static_assets.stamp
00_slide/slide/lib/: main.dart
00_slide/slide/lib/messages/: render_request.pb.dart  render_request.pbenum.dart  render_request.pbjson.dart  render_request.pbserver.dart
00_slide/slide/messages/: render_request.proto
00_slide/svg/: sdf.typ
00_tests/: Cargo.toml
00_tests/src/: main.rs
00_학술제 발표자료/: 슬라이드.typ
00_학술제 발표자료/slide/: README.md  pubspec.yaml
00_학술제 발표자료/slide/lib/: main.dart
01_prototype/: Cargo.toml
01_prototype/src/: main.rs
02_second/: Cargo.toml
02_second/src/: foundation.rs  foundations.rs  gui.rs  lib.rs  linear.rs  models.rs  operators.rs  vector3.rs
02_second/src/foundations/: linear.rs
(+45 files in other folders)
