[package]
name = "prototype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
iced = {version = "0.10.0", features = ["image", "advanced"]}
image = "0.24.7"
tokio = { version = "1", features = ["full"] }